{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 12,
  "lineage": "c260960e-c8e9-9b1a-03f6-7c006d973eae",
  "resources": [
    {
      "module": "module.webserver_node",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Instances",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0be057a22c63962cb",
            "arn": "arn:aws:ec2:eu-west-2:593198633279:instance/i-04ce0a87fc32f950f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-04ce0a87fc32f950f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "app1",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f32e61e0e923e016",
            "private_dns": "ip-10-0-0-29.eu-west-2.compute.internal",
            "private_ip": "10.0.0.29",
            "public_dns": "ec2-52-56-126-96.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.126.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08bfd49cb3e028d8a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03958fee2ebf55bd5",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e4b3c6051cd52582"
            ]
          },
          "dependencies": [
            "module.aws_vpc.aws_subnet.publicA",
            "module.aws_webserver_sg.aws_security_group.wsg"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-00c944b74232b3ac6",
            "owner_id": "593198633279",
            "tags": {
              "Name": "VPC Internet Gateway"
            },
            "vpc_id": "vpc-00ffc2c3d1eab642c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09262d4cd5b932daf",
            "owner_id": "593198633279",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00c944b74232b3ac6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for VPC"
            },
            "vpc_id": "vpc-00ffc2c3d1eab642c"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.vpc_igw",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subA_rta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd7edff4a3e186be",
            "route_table_id": "rtb-09262d4cd5b932daf",
            "subnet_id": "subnet-03958fee2ebf55bd5"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.vpc_igw",
            "module.aws_vpc.aws_route_table.vpc_rt",
            "module.aws_vpc.aws_subnet.publicA",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_webserver_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:593198633279:security-group/sg-0e4b3c6051cd52582",
            "description": "Allow SSH connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4b3c6051cd52582",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "WebServerSG",
            "name_prefix": null,
            "owner_id": "593198633279",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-00ffc2c3d1eab642c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:593198633279:subnet/subnet-03958fee2ebf55bd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-03958fee2ebf55bd5",
            "map_public_ip_on_launch": false,
            "owner_id": "593198633279",
            "vpc_id": "vpc-00ffc2c3d1eab642c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:593198633279:vpc/vpc-00ffc2c3d1eab642c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-080cf9be10bb57fef",
            "default_route_table_id": "rtb-0fc94274e73029dcd",
            "default_security_group_id": "sg-0731810441fe401d8",
            "dhcp_options_id": "dopt-3e217656",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00ffc2c3d1eab642c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fc94274e73029dcd",
            "owner_id": "593198633279",
            "tags": {
              "name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}